library/src/libqvalidator.h

typedef struct QDoubleValidator QDoubleValidator;
typedef struct QIntValidator QIntValidator;
typedef struct QLocale QLocale;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QRegularExpression QRegularExpression;
typedef struct QRegularExpressionValidator QRegularExpressionValidator;
typedef struct QValidator QValidator;
QTLIBC_API QValidator* QValidator_new();
QTLIBC_API QValidator* QValidator_new2(QObject* parent);
QTLIBC_API QMetaObject* QValidator_MetaObject(const QValidator* self);
QTLIBC_API void* QValidator_Metacast(QValidator* self, const char* param1);
QTLIBC_API int QValidator_Metacall(QValidator* self, int param1, int param2, void** param3);
QTLIBC_API libqt_string QValidator_Tr(const char* s);
QTLIBC_API void QValidator_SetLocale(QValidator* self, QLocale* locale);
QTLIBC_API QLocale* QValidator_Locale(const QValidator* self);
QTLIBC_API int QValidator_Validate(const QValidator* self, libqt_string param1, int* param2);
QTLIBC_API void QValidator_Fixup(const QValidator* self, libqt_string param1);
QTLIBC_API void QValidator_Changed(QValidator* self);
QTLIBC_API libqt_string QValidator_Tr2(const char* s, const char* c);
QTLIBC_API libqt_string QValidator_Tr3(const char* s, const char* c, int n);
QTLIBC_API QIntValidator* QIntValidator_new();
QTLIBC_API QIntValidator* QIntValidator_new2(int bottom, int top);
QTLIBC_API QIntValidator* QIntValidator_new3(QObject* parent);
QTLIBC_API QIntValidator* QIntValidator_new4(int bottom, int top, QObject* parent);
QTLIBC_API QMetaObject* QIntValidator_MetaObject(const QIntValidator* self);
QTLIBC_API void* QIntValidator_Metacast(QIntValidator* self, const char* param1);
QTLIBC_API int QIntValidator_Metacall(QIntValidator* self, int param1, int param2, void** param3);
QTLIBC_API libqt_string QIntValidator_Tr(const char* s);
QTLIBC_API int QIntValidator_Validate(const QIntValidator* self, libqt_string param1, int* param2);
QTLIBC_API void QIntValidator_Fixup(const QIntValidator* self, libqt_string input);
QTLIBC_API void QIntValidator_SetBottom(QIntValidator* self, int bottom);
QTLIBC_API void QIntValidator_SetTop(QIntValidator* self, int top);
QTLIBC_API void QIntValidator_SetRange(QIntValidator* self, int bottom, int top);
QTLIBC_API int QIntValidator_Bottom(const QIntValidator* self);
QTLIBC_API int QIntValidator_Top(const QIntValidator* self);
QTLIBC_API void QIntValidator_BottomChanged(QIntValidator* self, int bottom);
QTLIBC_API void QIntValidator_TopChanged(QIntValidator* self, int top);
QTLIBC_API libqt_string QIntValidator_Tr2(const char* s, const char* c);
QTLIBC_API libqt_string QIntValidator_Tr3(const char* s, const char* c, int n);
QTLIBC_API QDoubleValidator* QDoubleValidator_new();
QTLIBC_API QDoubleValidator* QDoubleValidator_new2(double bottom, double top, int decimals);
QTLIBC_API QDoubleValidator* QDoubleValidator_new3(QObject* parent);
QTLIBC_API QDoubleValidator* QDoubleValidator_new4(double bottom, double top, int decimals, QObject* parent);
QTLIBC_API QMetaObject* QDoubleValidator_MetaObject(const QDoubleValidator* self);
QTLIBC_API void* QDoubleValidator_Metacast(QDoubleValidator* self, const char* param1);
QTLIBC_API int QDoubleValidator_Metacall(QDoubleValidator* self, int param1, int param2, void** param3);
QTLIBC_API libqt_string QDoubleValidator_Tr(const char* s);
QTLIBC_API int QDoubleValidator_Validate(const QDoubleValidator* self, libqt_string param1, int* param2);
QTLIBC_API void QDoubleValidator_Fixup(const QDoubleValidator* self, libqt_string input);
QTLIBC_API void QDoubleValidator_SetRange(QDoubleValidator* self, double bottom, double top, int decimals);
QTLIBC_API void QDoubleValidator_SetRange2(QDoubleValidator* self, double bottom, double top);
QTLIBC_API void QDoubleValidator_SetBottom(QDoubleValidator* self, double bottom);
QTLIBC_API void QDoubleValidator_SetTop(QDoubleValidator* self, double top);
QTLIBC_API void QDoubleValidator_SetDecimals(QDoubleValidator* self, int decimals);
QTLIBC_API void QDoubleValidator_SetNotation(QDoubleValidator* self, int notation);
QTLIBC_API double QDoubleValidator_Bottom(const QDoubleValidator* self);
QTLIBC_API double QDoubleValidator_Top(const QDoubleValidator* self);
QTLIBC_API int QDoubleValidator_Decimals(const QDoubleValidator* self);
QTLIBC_API int QDoubleValidator_Notation(const QDoubleValidator* self);
QTLIBC_API void QDoubleValidator_BottomChanged(QDoubleValidator* self, double bottom);
QTLIBC_API void QDoubleValidator_TopChanged(QDoubleValidator* self, double top);
QTLIBC_API void QDoubleValidator_DecimalsChanged(QDoubleValidator* self, int decimals);
QTLIBC_API void QDoubleValidator_NotationChanged(QDoubleValidator* self, int notation);
QTLIBC_API libqt_string QDoubleValidator_Tr2(const char* s, const char* c);
QTLIBC_API libqt_string QDoubleValidator_Tr3(const char* s, const char* c, int n);
QTLIBC_API QRegularExpressionValidator* QRegularExpressionValidator_new();
QTLIBC_API QRegularExpressionValidator* QRegularExpressionValidator_new2(QRegularExpression* re);
QTLIBC_API QRegularExpressionValidator* QRegularExpressionValidator_new3(QObject* parent);
QTLIBC_API QRegularExpressionValidator* QRegularExpressionValidator_new4(QRegularExpression* re, QObject* parent);
QTLIBC_API QMetaObject* QRegularExpressionValidator_MetaObject(const QRegularExpressionValidator* self);
QTLIBC_API void* QRegularExpressionValidator_Metacast(QRegularExpressionValidator* self, const char* param1);
QTLIBC_API int QRegularExpressionValidator_Metacall(QRegularExpressionValidator* self, int param1, int param2, void** param3);
QTLIBC_API libqt_string QRegularExpressionValidator_Tr(const char* s);
QTLIBC_API int QRegularExpressionValidator_Validate(const QRegularExpressionValidator* self, libqt_string input, int* pos);
QTLIBC_API QRegularExpression* QRegularExpressionValidator_RegularExpression(const QRegularExpressionValidator* self);
QTLIBC_API void QRegularExpressionValidator_SetRegularExpression(QRegularExpressionValidator* self, QRegularExpression* re);
QTLIBC_API void QRegularExpressionValidator_RegularExpressionChanged(QRegularExpressionValidator* self, QRegularExpression* re);
QTLIBC_API libqt_string QRegularExpressionValidator_Tr2(const char* s, const char* c);
QTLIBC_API libqt_string QRegularExpressionValidator_Tr3(const char* s, const char* c, int n);